# wortschatz

./: .dockerignore  .gitignore  Dockerfile  index.html  index.ts  package.json
api/: main.py  pyproject.toml
src/: Main.elm  Route.elm
