[tool.poetry]
name = "wortschatz"
version = "0.1.0"
description = "Lernen, wie es dir gefällt"
authors = ["Michal Janočko <michal@janocko.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
httpx = "^0.22.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
